<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
  <item
    android:id="@+id/navbar_profile"
    android:icon="@drawable/ic_person_white_24dp"
    android:title="Profile"/>
  <item
    android:id="@+id/navbar_repo"
    android:icon="@drawable/ic_folder_white_24dp"
    android:title="Repo"/>
  <item
    android:id="@+id/navbar_following"
    android:icon="@drawable/ic_favorite_white_24dp"
    android:title="Following"/>
  <item
    android:id="@+id/navbar_follower"
    android:icon="@drawable/ic_grade_white_24dp"
    android:title="Followers"/>
  <item
    android:id="@+id/navbar_notifications"
    android:icon="@drawable/ic_chat_bubble_white_24dp"
    android:title="Feeds"/>
</menu>