<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:card_view="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <!--Card Containing profile image, name, username, and dates-->
    <android.support.v7.widget.CardView
      android:id="@+id/profile_cv_1"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="10sp"
      card_view:cardCornerRadius="5sp"
      card_view:cardElevation="2sp">

      <RelativeLayout
        android:id="@+id/profile_rl_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp">

        <ImageView
          android:id="@+id/profile_iv"
          android:layout_width="90sp"
          android:layout_height="90sp"
          android:layout_centerVertical="true"/>

        <RelativeLayout
          android:id="@+id/profile_rl_2"
          android:layout_toEndOf="@id/profile_iv"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_centerVertical="true"
          android:layout_marginStart="15sp"
          android:layout_marginEnd="10sp">

          <TextView
            android:id="@+id/profile_username_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textSize="25sp"/>

          <RelativeLayout
            android:id="@+id/profile_rl_3"
            android:layout_below="@id/profile_username_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="15sp">

            <TextView
              android:id="@+id/profile_date_created_title"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="created at  :"
              android:textSize="15sp"/>

            <TextView
              android:id="@+id/profile_date_created_tv"
              android:layout_toEndOf="@id/profile_date_created_title"
              android:layout_marginStart="10sp"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"/>

          </RelativeLayout>

          <RelativeLayout
            android:layout_below="@id/profile_rl_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <TextView
              android:id="@+id/profile_date_updated_title"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="updated at :"
              android:textSize="15sp"/>

            <TextView
              android:id="@+id/profile_date_updated_tv"
              android:layout_toEndOf="@id/profile_date_updated_title"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginStart="10sp"/>

          </RelativeLayout>
        </RelativeLayout>
      </RelativeLayout>
    </android.support.v7.widget.CardView>

    <!--Card Containing numbers of repositories,followers, and following -->
    <android.support.v7.widget.CardView
      android:id="@+id/profile_cv_2"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="10sp"
      android:layout_marginEnd="10sp"
      android:layout_below="@id/profile_cv_1"
      card_view:cardCornerRadius="5sp"
      card_view:cardElevation="2sp">

      <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_username_tv"
        android:layout_gravity="center_horizontal|center_vertical">

        <TextView
          android:id="@+id/profile_repo_title"
          android:textStyle="bold"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="10sp"
          android:text="repositories"
          android:textSize="17sp"/>

        <android.support.v7.widget.CardView
          android:id="@+id/profile_repo_cv"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="10sp"
          android:layout_toEndOf="@id/profile_repo_title"
          card_view:cardBackgroundColor="#D3D3D3"
          card_view:cardCornerRadius="10sp">

          <TextView
            android:id="@+id/profile_repo_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp"/>

        </android.support.v7.widget.CardView>

        <TextView
          android:id="@+id/profile_follower_title"
          android:textStyle="bold"
          android:layout_toEndOf="@id/profile_repo_cv"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="15sp"
          android:text="follower"
          android:textSize="17sp"/>

        <android.support.v7.widget.CardView
          android:id="@+id/profile_follower_cv"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="10sp"
          android:layout_toEndOf="@id/profile_follower_title"
          card_view:cardBackgroundColor="#D3D3D3"
          card_view:cardCornerRadius="10sp">

          <TextView
            android:id="@+id/profile_follower_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp"/>

        </android.support.v7.widget.CardView>

        <TextView
          android:id="@+id/profile_following_title"
          android:textStyle="bold"
          android:layout_toEndOf="@id/profile_follower_cv"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="15sp"
          android:text="following"
          android:textSize="17sp"/>

        <android.support.v7.widget.CardView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="10sp"
          android:layout_toEndOf="@id/profile_following_title"
          card_view:cardBackgroundColor="#D3D3D3"
          card_view:cardCornerRadius="10sp">

          <TextView
            android:id="@+id/profile_following_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp"/>

        </android.support.v7.widget.CardView>
      </RelativeLayout>
    </android.support.v7.widget.CardView>

    <!--Card Containing email-->
    <android.support.v7.widget.CardView
      android:id="@+id/profile_cv_6"
      android:layout_below="@id/profile_cv_2"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="10sp"
      card_view:cardElevation="2sp"
      card_view:cardCornerRadius="5sp">

      <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp">
        <TextView
          android:id="@+id/profile_name_title"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="Name"
          android:textStyle="bold"
          android:textSize="25sp"/>

        <TextView
          android:text="qernqkelwrjekjkqrkl"
          android:id="@+id/profile_name_tv"
          android:layout_below="@id/profile_name_title"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textSize="20sp"/>
      </RelativeLayout>
    </android.support.v7.widget.CardView>

    <!--Card Containing bio-->
    <android.support.v7.widget.CardView
      android:id="@+id/profile_cv_3"
      android:layout_below="@id/profile_cv_6"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="10sp"
      card_view:cardElevation="2sp"
      card_view:cardCornerRadius="5sp">

      <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp">
          <TextView
            android:id="@+id/profile_bio_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Bio"
            android:textStyle="bold"
            android:textSize="25sp"/>

          <TextView
            android:text="qernqkelwrjekjkqrkl"
            android:id="@+id/profile_bio_tv"
            android:layout_below="@id/profile_bio_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"/>
      </RelativeLayout>
    </android.support.v7.widget.CardView>

    <!--Card Containing website-->
    <android.support.v7.widget.CardView
      android:id="@+id/profile_cv_4"
      android:layout_below="@id/profile_cv_3"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="10sp"
      card_view:cardElevation="2sp"
      card_view:cardCornerRadius="5sp">

      <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp">
        <TextView
          android:id="@+id/profile_website_title"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="Website"
          android:textStyle="bold"
          android:textSize="25sp"/>

        <TextView
          android:autoLink="web"
          android:id="@+id/profile_website_tv"
          android:layout_below="@id/profile_website_title"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textSize="20sp"/>
      </RelativeLayout>
    </android.support.v7.widget.CardView>

    <!--Card Containing email-->
    <android.support.v7.widget.CardView
      android:id="@+id/profile_cv_5"
      android:layout_below="@id/profile_cv_4"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="10sp"
      card_view:cardElevation="2sp"
      card_view:cardCornerRadius="5sp">

      <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp">
        <TextView
          android:id="@+id/profile_email_title"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="Email"
          android:textStyle="bold"
          android:textSize="25sp"/>

        <TextView
          android:text="qernqkelwrjekjkqrkl"
          android:id="@+id/profile_email_tv"
          android:layout_below="@id/profile_email_title"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textSize="20sp"/>
      </RelativeLayout>
    </android.support.v7.widget.CardView>


  </RelativeLayout>
</ScrollView>