...

    <FrameLayout
      android:id="@+id/main_fl"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_below="@id/actionbar_main"
      android:layout_above="@+id/main_navbar"
      android:background="#CDDDFA"
      android:animateLayoutChanges="true">
    </FrameLayout>

    <android.support.design.widget.BottomNavigationView
      android:id="@+id/main_navbar"
...
